# nng3

./: .gitignore  CMakeLists.txt  agent.cpp  board.cpp  clear_compile_run.sh  compile.sh  direction.h  global.cpp  global.h  header.h  input.cpp  main.cpp  move.cpp  node.cpp  point.cpp  run.sh  solve.cpp  updateCmake.sh
final/: compile.sh  final.cpp  final.out
input/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
test_cases/: input001.txt  output001.txt
